# SynapseKit

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DISCORD_RELEASE_WEBHOOKS.md  DISCORD_WELCOME.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  discord-members.json
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  discord-daily-fact.yml  discord-notify.yml  init-wiki.yml  welcome.yml
docs/: COMMERCIALIZATION.md  FEATURE_PARITY.md  GROWTH_PLAN.md  ROADMAP.md
examples/: README.md  agent_tools.py  caching_retries.py  graph_workflow.py  multi_provider.py  rag_quickstart.py
src/synapsekit/: __init__.py  plugins.py
tests/: conftest.py  test_eval_case.py  test_issue_598_self_healing.py  test_perf_regression.py  test_snowflake_loader.py  test_tracer_quality.py  test_v053_features.py  test_v060_features.py  test_v065_features.py  test_v066_features.py  test_v068_features.py  test_v069_features.py  test_v070_features.py  test_v090_features.py  test_v100_features.py  test_v120_features.py  test_v120_integration.py
tests/agents/: test_agent_facade.py  test_api_builder_tool.py  test_aws_lambda_tool.py  test_cron_trigger.py  test_image_gen_tool.py  test_linear_tool.py  test_news_tool.py  test_shell_tool.py  test_simple_agent.py  test_swarm.py  test_tools.py  test_tools_behavioral.py  test_twilio_tool.py  test_voice_agent.py  test_web_scraper.py
tests/api/: test_graph_builder_api.py  test_mcp_server.py
tests/behavioral/: test_memory_behavior.py  test_pipeline_behavior.py
tests/cli/: test_benchmark.py  test_ui.py
tests/e2e/: test_agent_e2e.py  test_graph_e2e.py  (+1 more)
(+245 files in other folders)
