[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nimbleai"
version = "0.1.0"
description = "Lightweight, async-first RAG framework. Streaming-native, minimal dependencies."
authors = ["Amit Nautiyal <de.amit.nautiyal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AmitoVrito/nimbleai"
repository = "https://github.com/AmitoVrito/nimbleai"
keywords = ["rag", "llm", "ai", "async", "streaming", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "nimbleai"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.26"
chunkrank = ">=1.0.0"

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
semantic = ["sentence-transformers"]
all = ["openai", "anthropic", "sentence-transformers", "cohere"]

[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = ">=1.0"

[tool.poetry.group.anthropic]
optional = true

[tool.poetry.group.anthropic.dependencies]
anthropic = ">=0.25"

[tool.poetry.group.semantic]
optional = true

[tool.poetry.group.semantic.dependencies]
sentence-transformers = ">=2.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
